# doli

./: .claude.local  .dockerignore  .env.example  .env.example.devnet  .env.example.mainnet  .env.example.testnet  .gitignore  AUTO_UPDATE_SYSTEM.md  CLAUDE.md  CLI.md  Cargo.toml  Cross.toml  DOLI_NETWORK_BUG.md  Dockerfile  IMPLEMENTATION_CLAIM_REWARD.md  LAUNCH_CHECKLIST.internal.md  LICENSE  PROMPT.md  README.md  REPORT.md  REWARDS.md  REWARD_REPORT.md  SCALABILITY_PLAN.md  TASKS.md  TEST.md  WHITEPAPER-es.md  WHITEPAPER.md  chainspec.mainnet.json  chainspec.testnet.json  docker-compose.devnet.yml  docker-compose.testnet.yml  docker-compose.yml  docker-entrypoint.sh  flake.nix  justfile
bins/cli/: Cargo.toml
bins/cli/src/: cmd_bridge.rs  cmd_chain.rs  cmd_channel.rs  cmd_governance.rs  cmd_guardian.rs  cmd_init.rs  cmd_loan.rs  cmd_nft.rs  cmd_pool.rs  cmd_producer.rs  cmd_service.rs  cmd_snap.rs  cmd_token.rs  cmd_upgrade.rs  cmd_wallet.rs  commands.rs  common.rs  main.rs  parsers.rs  paths.rs  rpc_client.rs  wallet.rs
bins/cli/src/cmd_nft/: batch.rs  buy.rs  export.rs  fractionalize.rs  info.rs  list.rs  mint.rs  mod.rs  redeem.rs  sell.rs  transfer.rs
bins/cli/src/cmd_producer/: bonds.rs  common.rs  dispatch.rs  exit.rs  mod.rs  register.rs  status.rs  withdrawal.rs
bins/gui/: Cargo.toml  tauri.conf.json
bins/gui/capabilities/: default.json
bins/gui/src/: main.rs  node_manager.rs  state.rs
bins/gui/src-ui/: index.html  package.json  vite.config.js
bins/gui/src-ui/src/: App.svelte  styles.css
bins/gui/src/commands/: bridge.rs  governance.rs  mod.rs  network.rs  nft.rs  node.rs  producer.rs  rewards.rs  transaction.rs  wallet.rs
bins/node/: Cargo.toml  build.rs  postinst.sh
bins/node/src/: cli.rs  config.rs  devnet.rs  heartbeat_pool.rs  keys.rs  lib.rs  main.rs  metrics.rs  nat_check.rs  node.rs  run.rs  updater.rs
bins/node/src/commands/: maintainer.rs  misc.rs  mod.rs  update.rs
bins/node/src/devnet/: add_producer.rs  clean.rs  config.rs  init.rs  mod.rs  process.rs  start.rs  status.rs  stop.rs
bins/node/src/node/: apply_block.rs  block_handling.rs  event_loop.rs  fork_recovery.rs  genesis.rs  init.rs  mod.rs  network_events.rs  periodic.rs  production.rs  rewards.rs  rollback.rs  startup.rs  tx_announcements.rs  validation_checks.rs
bins/node/src/operations/: chain.rs  init.rs  mod.rs  restore.rs
bins/node/src/producer/: constants.rs  errors.rs  guard.rs  mod.rs  signed_slots.rs
bins/node/src/updater/: cli.rs  mod.rs  notifications.rs  service.rs
bins/node/tests/: checkpoint_rotation.rs  epoch_reward_explicit_inputs.rs  fork_recovery.rs  test_network.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: bitcoin.rs  config.rs  doli.rs  error.rs  ethereum.rs  lib.rs  store.rs  swap.rs  watcher.rs
crates/channels/: Cargo.toml
crates/channels/src/: channel.rs  close.rs  commitment.rs  conditions.rs  config.rs  error.rs  funding.rs  htlc.rs  invoice.rs  lib.rs  manager.rs  monitor.rs  payment.rs  protocol.rs  router.rs  rpc.rs  state_machine.rs  store.rs  types.rs  watchtower.rs
crates/channels/tests/: supply_invariant.rs
crates/core/: Cargo.toml  build.rs
crates/core/proptest-regressions/: consensus.txt  transaction.txt
crates/core/proto/doli/: producer.proto
crates/core/src/: attestation.rs  block.rs  chainspec.rs  conditions.rs  config_validation.rs  consensus.rs  env_loader.rs  finality.rs  genesis.rs  heartbeat.rs  heartbeat_tests.rs  lending.rs  lib.rs  maintainer.rs  maintainer_tests.rs  merkle.rs  network.rs  network_params.rs  nft.rs  pool.rs  presence.rs  presence_tests.rs  protocol_activation.rs  rewards.rs  scheduler.rs  transaction.rs  types.rs  validation.rs
crates/core/src/conditions/: encoding.rs  eval.rs  mod.rs  tests.rs  witness.rs
crates/core/src/consensus/: bonds.rs  constants.rs  exit.rs  mod.rs  params.rs  producer_state.rs  registration.rs  reward_epoch.rs  selection.rs  stress.rs  tests.rs  tiers.rs  vdf.rs
crates/core/src/discovery/: mod.rs  (+6 more)
crates/core/tests/: p0001_exploit.rs
crates/crypto/: Cargo.toml
crates/crypto/proptest-regressions/: merkle.txt
crates/crypto/src/: adaptor.rs  address.rs  address_type.rs  bls.rs  hash.rs  keys.rs  lib.rs  merkle.rs  signature.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: entry.rs  lib.rs  policy.rs  pool.rs  pool_accept.rs  pool_tests.rs
crates/network/: Cargo.toml
crates/network/src/: behaviour.rs  config.rs  discovery.rs  gossip.rs  lib.rs  messages.rs  nat.rs  peer.rs  peer_cache.rs  rate_limit.rs  scoring.rs  service.rs  transport.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: error.rs  lib.rs  methods.rs  server.rs  types.rs  ws.rs
crates/storage/: Cargo.toml
crates/storage/src/: archiver.rs  block_store.rs  chain_state.rs  claim_registry.rs  content_store.rs  lib.rs  maintainer.rs  mmr.rs  producer.rs  snapshot.rs  state_db.rs  update.rs  utxo.rs  utxo_rocks.rs
crates/updater/: Cargo.toml
crates/updater/src/: apply.rs  constants.rs  download.rs  enforcement.rs  hardfork.rs  lib.rs  params.rs  test_keys.rs  types.rs  util.rs  verification.rs  vote.rs  watchdog.rs
crates/vdf/: Cargo.toml
crates/vdf/proptest-regressions/: class_group.txt  vdf.txt
crates/vdf/src/: class_group.rs  lib.rs  proof.rs  vdf.rs
crates/vdf/tests/: wesolowski_bench.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: lib.rs  rpc_client.rs  rpc_client_tests.rs  tx_builder.rs  types.rs  wallet.rs
crates/wallet/tests/: serialization_compat.rs  tx_builder.rs  wallet_compat.rs
testing/benchmarks/: Cargo.toml
testing/benchmarks/results/: hardware_matrix.md
testing/benchmarks/src/: main.rs
testing/fuzz/: Cargo.toml  README.md
testing/fuzz/targets/: block_deserialize.rs  hash.rs  merkle.rs  signature.rs  tx_deserialize.rs  vdf_verify.rs
testing/integration/: Cargo.toml  attack_reorg_test.rs  bond_stacking.rs  epoch_rewards.rs  equivocation_slashing.rs  malicious_peer.rs  mempool_poison.rs  mempool_stress.rs  partition_heal.rs  presence_manipulation_test.rs  reorg_test.rs  staggered_validator_rewards.rs  two_node_sync.rs  two_producer_pop.rs
(+1798 files in other folders)
