[package]
name = "doli-cli"
description = "DOLI wallet command-line interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "doli"
path = "src/main.rs"

[dependencies]
doli-core = { workspace = true }
crypto = { workspace = true }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex.workspace = true
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
