[package]
name = "doli-cli"
description = "DOLI wallet command-line interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "doli"
path = "src/main.rs"

[dependencies]
doli-core = { workspace = true }
crypto = { workspace = true }
vdf = { workspace = true }
bincode.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex.workspace = true
bip39.workspace = true
zeroize.workspace = true
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

[package.metadata.deb]
maintainer = "DOLI Network <doli@protonmail.com>"
section = "net"
priority = "optional"
assets = [
    ["target/release/doli", "usr/bin/", "755"],
]
extended-description = "Command-line wallet for the DOLI proof-of-time blockchain network."

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/doli", dest = "/usr/bin/doli", mode = "0755" },
]
