[package]
name = "doli-cli"
description = "DOLI wallet command-line interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "doli"
path = "src/main.rs"

[dependencies]
doli-core = { workspace = true }
crypto = { workspace = true }
storage = { workspace = true }
vdf = { workspace = true }
updater = { workspace = true }
channels = { workspace = true }
bridge = { workspace = true }
bincode.workspace = true
sha2.workspace = true
tiny-keccak = { workspace = true }
rand = { workspace = true }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex.workspace = true
chrono.workspace = true
bip39.workspace = true
zeroize.workspace = true
dirs.workspace = true
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile.workspace = true

[package.metadata.deb]
maintainer = "DOLI Network <doli@doli.network>"
section = "net"
priority = "optional"
assets = [
    ["target/release/doli", "usr/bin/", "755"],
]
extended-description = "Command-line wallet for the DOLI proof-of-time blockchain network."

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/doli", dest = "/usr/bin/doli", mode = "0755" },
]
