[package]
name = "doli-node"
description = "DOLI full node implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "doli-node"
path = "src/main.rs"

[dependencies]
doli-core = { workspace = true }
crypto = { workspace = true }
vdf = { workspace = true }
mempool = { workspace = true }
network = { workspace = true }
storage = { workspace = true }
rpc = { workspace = true }
updater = { workspace = true }
chrono.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
prometheus.workspace = true
lazy_static.workspace = true
axum.workspace = true
toml.workspace = true
dirs.workspace = true
fs2 = "0.4"        # Cross-platform file locking for producer guard
sled = "0.34"      # Embedded database for signed slots tracking
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
