[package]
name = "doli-node"
description = "DOLI full node implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "doli_node"
path = "src/lib.rs"

[[bin]]
name = "doli-node"
path = "src/main.rs"

[dependencies]
doli-core = { workspace = true }
crypto = { workspace = true }
vdf = { workspace = true }
mempool = { workspace = true }
network = { workspace = true }
storage = { workspace = true }
rpc = { workspace = true }
updater = { workspace = true }
chrono.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
bincode.workspace = true
anyhow.workspace = true
prometheus.workspace = true
lazy_static.workspace = true
axum.workspace = true
toml.workspace = true
dirs.workspace = true
fs2 = "0.4"        # Cross-platform file locking for producer guard
sled = "0.34"      # Embedded database for signed slots tracking
thiserror.workspace = true
reqwest = { version = "0.11", features = ["json"] }  # HTTP client for devnet RPC checks
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
futures.workspace = true

[package.metadata.deb]
name = "doli"
maintainer = "DOLI Network <doli@doli.network>"
section = "net"
priority = "optional"
assets = [
    ["target/release/doli-node", "usr/bin/", "755"],
    ["target/release/doli", "usr/bin/", "755"],
]
extended-description = "DOLI blockchain node and wallet CLI for the proof-of-time network."
maintainer-scripts = "bins/node/"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/doli-node", dest = "/usr/bin/doli-node", mode = "0755" },
    { source = "target/release/doli", dest = "/usr/bin/doli", mode = "0755" },
]
post_install_script = "bins/node/postinst.sh"
