[package]
name = "mempool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Transaction mempool for DOLI"

[dependencies]
doli-core = { workspace = true }
crypto = { workspace = true }
storage = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
