[package]
name = "updater"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Auto-update system with community veto for DOLI"

[dependencies]
crypto = { workspace = true }
doli-core = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "time", "fs"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Hex encoding
hex = { workspace = true }

# Hashing for binary verification
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
