[package]
name = "doli-benchmarks"
description = "VDF and performance benchmarks for DOLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vdf-benchmark"
path = "src/main.rs"

[dependencies]
vdf = { workspace = true }
crypto = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
